@@ -1088,6 +1088,7 @@ OpenDoc_ERROR_IN_FILE=Error in file
 XLIFF_OPTIONS_TITLE=XLIFF Filter Options
 XLIFF_OPTIONS_LABEL=Specify tag handling behaviour 
 XLIFF_OPTIONS_26=&Compatibility with OmegaT 2.6
+XLIFF_OPTIONS_FORCE2F=&Force shortcut to "f" for <it pos="end"> tags (applies to 3.x filter only)
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
