@@ -1035,6 +1035,7 @@ OpenDoc_ERROR_IN_FILE=Erreur dans le fichier
 XLIFF_OPTIONS_TITLE=Options du filtre Fichiers XLIFF
 XLIFF_OPTIONS_LABEL=Sp\u00e9cifier la gestion des balises 
 XLIFF_OPTIONS_26=&Compabitilit\u00e9 avec OmegaT 2.6
+XLIFF_OPTIONS_FORCE2F=&Forcer le raccourci \u00e0 \u00ab\u00a0f\u00a0\u00bb pour les balises <it pos="end"> (ne s'applique qu'au filtre 3.x)
 
 # org.omegat.filters3.xml.openxml.OpenXMLFilter
 
