@@ -58,6 +58,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         initComponents();
 
         compatibility26CB.setSelected(options.get26Compatibility());
+        forceshortcut2fCB.setSelected(options.getForceShortcutToF());
 
         // Handle escape key to close the window
         KeyStroke escape = KeyStroke.getKeyStroke(KeyEvent.VK_ESCAPE, 0, false);
@@ -100,6 +101,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         jPanel1 = new javax.swing.JPanel();
         jLabel2 = new javax.swing.JLabel();
         compatibility26CB = new javax.swing.JCheckBox();
+        forceshortcut2fCB = new javax.swing.JCheckBox();
 
         setTitle(OStrings.getString("XLIFF_OPTIONS_TITLE")); // NOI18N
         setCursor(new java.awt.Cursor(java.awt.Cursor.DEFAULT_CURSOR));
@@ -142,6 +144,9 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
         org.openide.awt.Mnemonics.setLocalizedText(compatibility26CB, bundle.getString("XLIFF_OPTIONS_26")); // NOI18N
         jPanel1.add(compatibility26CB);
 
+        org.openide.awt.Mnemonics.setLocalizedText(forceshortcut2fCB, bundle.getString("XLIFF_OPTIONS_FORCE2F")); // NOI18N
+        jPanel1.add(forceshortcut2fCB);
+
         getContentPane().add(jPanel1, java.awt.BorderLayout.CENTER);
 
         pack();
@@ -152,6 +157,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
     private void okButtonActionPerformed(java.awt.event.ActionEvent evt)// GEN-FIRST:event_okButtonActionPerformed
     {
         options.set26Compatibility(compatibility26CB.isSelected());
+        options.setForceShortcutToF(forceshortcut2fCB.isSelected());
 
         doClose(RET_OK);
     }// GEN-LAST:event_okButtonActionPerformed
@@ -179,6 +185,7 @@ public class EditXLIFFOptionsDialog extends javax.swing.JDialog {
     private javax.swing.JPanel buttonPanel;
     private javax.swing.JButton cancelButton;
     private javax.swing.JCheckBox compatibility26CB;
+    private javax.swing.JCheckBox forceshortcut2fCB;
     private javax.swing.JLabel jLabel2;
     private javax.swing.JPanel jPanel1;
     private javax.swing.JButton okButton;
