@@ -37,12 +37,14 @@ import org.omegat.filters2.AbstractOptions;
  * Translatable elements:
  * <ul>
  * <li>[] Compatibility with 2.6
+ * <li>[]Force shortcut to "f" for &lt;it pos="end&gt; tags
  * </ul>
  * 
  * @author Didier Briel
  */
 public class XLIFFOptions extends AbstractOptions {
     private static final String OPTION_26_COMPATIBILITY = "compatibility26";
+    private static final String OPTION_FORCE_SHORTCUT_2_F = "forceshortcut2f";
 
     public XLIFFOptions(Map<String, String> config) {
         super(config);
@@ -61,6 +63,21 @@ public class XLIFFOptions extends AbstractOptions {
     public void set26Compatibility(boolean compatibility26) {
         setBoolean(OPTION_26_COMPATIBILITY, compatibility26);
     }
+    
+    /** 
+     * Return whether the shortcut should be set to "f" for
+     * &lt;it pos="end&gt; tags
+     */
+    public boolean getForceShortcutToF() {
+        return getBoolean(OPTION_FORCE_SHORTCUT_2_F, false);
+    }
+    
+    /** 
+     * Set whether the shortcut should be set to "f" for
+     * &lt;it pos="end&gt; tags
+     */
+    public void setForceShortcutToF(boolean forceshortcut2f) {
+        setBoolean(OPTION_FORCE_SHORTCUT_2_F, forceshortcut2f);    
+    }
 
-   
 }
